# repository/laravel/app/Http/Controllers/FileController.php
@@ -10,6 +10,50 @@ use Illuminate\Http\Resources\Json\JsonResource;
 class FileController extends Controller
 {
     /**
+     * @OA\Post(
+     *     path="/api/v1/file/upload",
+     *     tags={"File"},
+     *     summary="Upload a file",
+     *     description="Test Description",
+     *     operationId="file-upload",
+     *     security={{"bearerAuth":{}}},
+     *     @OA\RequestBody(
+     *          required=true,
+     *          @OA\MediaType(
+     *             mediaType="multipart/form-data",
+     *             @OA\Schema(
+     *                 @OA\Property(
+     *                     type="string",
+     *                     property="file",
+     *                     format="binary",
+     *                     description="file to upload",
+     *                 ),
+     *                 required={"file"}
+     *             )
+     *         )
+     *    ),
+     *     @OA\Response(
+     *         response="200",
+     *         description="OK"
+     *     ),
+     *     @OA\Response(
+     *         response="401",
+     *         description="Unauthorized"
+     *     ),
+     *     @OA\Response(
+     *         response="404",
+     *         description="Page not found"
+     *     ),
+     *     @OA\Response(
+     *         response="422",
+     *         description="Unprocessable Entity"
+     *     ),
+     *     @OA\Response(
+     *         response="500",
+     *         description="Internal server error"
+     *     )
+     * )
+     *
      * Store a newly created resource in storage.
      */
     public function store(FileStoreRequest $request): JsonResource
